RESOLVED FIXED48751
Assertion failure in PluginStream::~PluginStream when running userscripts/user-script-plugin-document.html
https://bugs.webkit.org/show_bug.cgi?id=48751
Summary Assertion failure in PluginStream::~PluginStream when running userscripts/use...
Adam Roben (:aroben)
Reported 2010-11-01 07:13:16 PDT
To reproduce: 1. run-webkit-tests userscripts http You'll hit an assertion in PluginStream::~PluginStream. (run-webkit-tests will blame http/tests/cache/stopped-revalidation.html, but that test doesn't cause a problem on its own.) Here's the failing assertion: ASSERT(m_streamState != StreamStarted); See the URL for the backtrace.
Attachments
[PATCH] Fix (2.78 KB, patch)
2010-11-04 15:54 PDT, Brian Weinstein
bweinstein: commit-queue-
[PATCH] Style nit fix (2.77 KB, patch)
2010-11-04 16:12 PDT, Brian Weinstein
no flags
[PATCH] Fix (2.90 KB, patch)
2010-11-05 11:03 PDT, Brian Weinstein
andersca: review+
bweinstein: commit-queue-
Adam Roben (:aroben)
Comment 1 2010-11-01 07:38:56 PDT
I've added this test to the Skipped file.
Adam Roben (:aroben)
Comment 2 2010-11-01 07:41:05 PDT
Brian Weinstein
Comment 3 2010-11-04 15:54:14 PDT
Created attachment 72994 [details] [PATCH] Fix
WebKit Review Bot
Comment 4 2010-11-04 16:04:55 PDT
Attachment 72994 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/platform/win/Skipped', u'WebCore/ChangeLog', u'WebCore/plugins/PluginStream.cpp']" exit_code: 1 WebCore/plugins/PluginStream.cpp:336: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brian Weinstein
Comment 5 2010-11-04 16:12:25 PDT
Created attachment 73001 [details] [PATCH] Style nit fix
Brian Weinstein
Comment 6 2010-11-05 10:50:24 PDT
Comment on attachment 73001 [details] [PATCH] Style nit fix Anders expressed doubts about correctness of this patch, so obsoleting it for now - new patch coming shortly.
Brian Weinstein
Comment 7 2010-11-05 11:03:32 PDT
Created attachment 73085 [details] [PATCH] Fix
Brian Weinstein
Comment 8 2010-11-05 11:05:47 PDT
Will fix the LayoutTests/ChangeLog before landing, thanks Anders!
Brian Weinstein
Comment 9 2010-11-05 11:09:20 PDT
Landed in r71434.
Note You need to log in before you can comment on or make changes to this bug.